--- a/templates/expenses/add_expense.html
+++ b/templates/expenses/add_expense.html
@@ -1,10 +1,25 @@
 {% extends 'base.html' %}
 
+<div class="container mt-4">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="{% url 'expenses'%}">Expenses</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">Add Expenses</li>
+      </ol>
+    </nav>
+
+    <form action="{% url "expenses" %}" 
+     method="POST"
+    > 
+
+    </form>
+</div>
+
 {% block content %}
 
 <h1>
     Add Expense
 </h1>
-
-{% endblock content %}
 
